updated domain and rest client
