# HEAL.Hive.Domain/DTOs/Entities/ResourceDTO.cs
@@ -3,7 +3,7 @@
 namespace HEAL.Hive.Domain.DTOs.Entities {
   
   [Serializable]
-  public abstract class ResourceDTO {
+  public class ResourceDTO {
     public Guid Id { get; set; }
     public DateTime CreatedAt { get; set; }
     public DateTime ModifiedAt { get; set; }
